# hs-nacl

./: .gitignore  .travis.yml  AUTHORS.txt  HLint.hs  LICENSE.txt  README.md  default.nix  index.html  nacl.cabal  params.json
benchmarks/: BLAKE.hs  BLAKE2.hs  Box.hs  ChaCha20.hs  Curve25519.hs  Ed25519.hs  HMACSHA512.hs  Nonce.hs  Poly1305.hs  Random.hs  SHA.hs  SecretBox.hs  Siphash24.hs  Siphash48.hs  Stream.hs  Util.hs  bench.hs
scripts/: benchmarks.hs  coverage.hs
src/Crypto/: Key.hs  NaCl.hs  Nonce.hs
src/Crypto/DH/: Curve25519.hs
src/Crypto/Encrypt/: Box.hs  SecretBox.hs  Stream.hs
src/Crypto/Encrypt/Stream/: ChaCha20.hs
src/Crypto/HMAC/: SHA512.hs
src/Crypto/Hash/: BLAKE.hs  BLAKE2.hs  SHA.hs
src/Crypto/Internal/: Scrypt.hs
src/Crypto/KDF/: Scrypt.hs
src/Crypto/MAC/: Poly1305.hs  Siphash24.hs  Siphash48.hs
src/Crypto/Password/: Scrypt.hs
src/Crypto/Sign/: Ed25519.hs
src/System/Crypto/: Random.hs
src/cbits/blake/: blake256.c  blake256.h  blake512.c  blake512.h
src/cbits/chacha20-krovetz/: stream.c
src/cbits/chacha20-portable/: chacha20-portable.c  chacha20-test.c  chacha20.h
src/cbits/curve25519/: curve25519.c  curve25519.h
src/cbits/curve25519-donna/: .gitignore  curve25519-donna-32bit.h  curve25519-donna-64bit.h  curve25519-donna-portable.h  curve25519-donna-sse2.h  curve25519-optimizations-32bit.md  curve25519.c  curve25519.h  setup.py  test.c
src/cbits/curve25519-donna/fuzz/: README.md  build-nix.php  curve25519-donna-sse2.c  curve25519-donna.c  curve25519-donna.h  fuzz-curve25519.c
src/cbits/ed25519/: ed25519.c  keypair.c
src/cbits/hmac-sha512256/: hmac-sha512256.c  hmac-sha512256.h
src/cbits/poly1305/: poly1305.c  poly1305.h
src/cbits/poly1305-donna/: README.md  poly1305-donna.c  poly1305-donna.h
src/cbits/scrypt/: crypto_scrypt-sse.c  sha256.c  sha256.h
src/cbits/scryptenc-jane/code/: scrypt-jane-portable-x86.h  scrypt-jane-portable.h  scrypt-jane-romix-basic.h
src/cbits/sha/: sha256.c  sha256.h  sha512.c  sha512.h
src/cbits/siphash2448/: siphash2448.c  siphash2448.h
src/cbits/util/: nonce.c  nonce.h  randombytes.c  randombytes.h
src/cbits/xsalsa20/: xsalsa20.c  xsalsa20.h
src/cbits/xsalsa20poly1305/: xsalsa20poly1305.c  xsalsa20poly1305.h
tests/: BLAKE.hs  BLAKE2.hs  Box.hs  ChaCha20.hs  Curve25519.hs  Ed25519.hs  HMACSHA512.hs  Nonce.hs  Poly1305.hs  SHA.hs  SecretBox.hs  Siphash2448.hs  Stream.hs  Util.hs  doctests.hs  properties.hs
